--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/ClownBall
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1170,6 +1170,18 @@ REINST_BP_Knife_C_52.Tags=True
 REINST_BP_Knife_C_52.ComponentReplication=True
 REINST_BP_Knife_C_52.Cooking=True
 REINST_BP_Knife_C_52.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+LevelScriptBlueprint.ClassOptions=True
+LevelScriptBlueprint.BlueprintOptions=True
+LevelScriptBlueprint.Interfaces=True
+LevelScriptBlueprint.Packaging=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1196,12 +1208,12 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_EyeBall.BP_EyeBall;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire/P_Fire_wallTorch_Trans_mobile.P_Fire_wallTorch_Trans_mobile;
 RecentlyPlaced=/Script/Engine.TriggerSphere;/Engine/Transient.ActorFactoryTriggerSphere_0
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_EyeBall.BP_EyeBall;
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/BatFlying/BatFlying3_Sprite.BatFlying3_Sprite;
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV3_Sprite.ParahnaV3_Sprite;
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV2_Sprite.ParahnaV2_Sprite;
@@ -1221,7 +1233,7 @@ RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_groundCo
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=1.000 Y=6.000
+ScreenPosition=X=17.000 Y=4.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1962,6 +1974,7 @@ bConvertSceneUnit=False
 /Game/Sprites_Decals/IntroScene/BatFlying/BatFlying3.BatFlying3=0
 /Game/Blueprints/ClownBall/BP_EyeBall.BP_EyeBall=0
 /Game/_Scenes/ClownBall.ClownBall:PersistentLevel.ClownBall=0
+/Game/Blueprints/_GeneralUse/BPI_ScoreController.BPI_ScoreController=0
 
 [MaterialEditor]
 PrimType=1
@@ -2005,5 +2018,6 @@ InitialInterpMode2=5
 
 [SuppressableDialogs]
 MatineeToLevelSequence=False
+ChangeVariableType_Warning=False
 
 
