--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,10 +75,10 @@ CurrentPosGridSize=1
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/_Scenes/ClownBall
-MRUItem1=/Game/_Scenes/IntroScene
-MRUItem2=/Game/_Scenes/KnifeThrow
-MRUItem3=/Game/_Scenes/HeartBall
+MRUItem0=/Game/_Scenes/HeartBall
+MRUItem1=/Game/_Scenes/ClownBall
+MRUItem2=/Game/_Scenes/IntroScene
+MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/Bowling
 MRUItem5=/Game/_Scenes/Maze
 MRUItem6=/Game/VirtualRealityBP/Maps/MotionControllerMap
@@ -89,7 +89,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/ClownBall
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -113,7 +113,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/ClownBall
+LastLevel=/Game/_Scenes/HeartBall
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1208,6 +1208,7 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Heart.BP_Heart;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_EyeBall.BP_EyeBall;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -1227,13 +1228,12 @@ RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_light_St
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_light.P_Dust_light;
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_Heavy_StrongWind.P_Dust_Heavy_StrongWind;
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_Heavy.P_Dust_Heavy;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_groundCoat.P_Dust_groundCoat;
 
 [MessageLog]
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=17.000 Y=4.000
+ScreenPosition=X=13.000 Y=4.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
