--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,10 +75,10 @@ CurrentPosGridSize=1
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/ClownBall
-MRUItem2=/Game/_Scenes/IntroScene
-MRUItem3=/Game/_Scenes/KnifeThrow
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/HeartBall
+MRUItem2=/Game/_Scenes/ClownBall
+MRUItem3=/Game/_Scenes/IntroScene
 MRUItem4=/Game/_Scenes/Bowling
 MRUItem5=/Game/_Scenes/Maze
 MRUItem6=/Game/VirtualRealityBP/Maps/MotionControllerMap
@@ -113,7 +113,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/KnifeThrow
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1208,6 +1208,7 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_Knife.BP_Knife;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Heart.BP_Heart;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_EyeBall.BP_EyeBall;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1227,7 +1228,6 @@ RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Mist_mobile.P
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_light_StrongWind.P_Dust_light_StrongWind;
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_light.P_Dust_light;
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_Heavy_StrongWind.P_Dust_Heavy_StrongWind;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_Heavy.P_Dust_Heavy;
 
 [MessageLog]
 LastLogListing=LightingResults
