--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,14 +74,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 CurrentRotGridSize=6
 GridEnabled=False
+CurrentScalingGridSize=6
 
 [MRU]
-MRUItem0=/Game/_Scenes/IntroScene
-MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/HeartBall
-MRUItem3=/Game/_Scenes/ClownBall
-MRUItem4=/Game/_Scenes/Bowling
-MRUItem5=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/IntroScene
+MRUItem2=/Game/_Scenes/KnifeThrow
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/ClownBall
+MRUItem5=/Game/_Scenes/Bowling
 MRUItem6=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -90,7 +91,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/VirtualRealityBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Sprites_Decals/_GeneralUse/Wall_Tent
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -116,7 +117,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/IntroScene
+LastLevel=/Game/_Scenes/Maze
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1492,11 +1493,11 @@ BoneProxy.Reference Transform=True
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object=
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -1520,6 +1521,8 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sprites_Decals/_GeneralUse/Wall_Tent/OriginalAsset_Carn_Wall_Sprite.OriginalAsset_Carn_Wall_Sprite;
+RecentlyPlaced=/Game/Sprites_Decals/_GeneralUse/Wall_Tent/OriginalAsset_Carn_Wall.OriginalAsset_Carn_Wall;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/BP_MenuButton.BP_MenuButton;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/BP_Button_Parent.BP_Button_Parent;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1538,16 +1541,14 @@ RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV1_Sprite.ParahnaV
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_MistRising_light.P_MistRising_light;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Mist_mobile.P_Mist_mobile;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=6.000 Y=4.000
 WindowSize=X=1577.000 Y=867.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1563,7 +1564,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
+UNR=../../../../../../Users/willj/Documents/GitHub/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
