--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,14 +75,15 @@ CurrentScalingGridSize=6
 CurrentPosGridSize=3
 GridEnabled=False
 RotGridEnabled=False
+CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/IntroScene
-MRUItem1=/Game/_Scenes/Bowling
-MRUItem2=/Game/_Scenes/HeartBall
-MRUItem3=/Game/_Scenes/ClownBall
-MRUItem4=/Game/_Scenes/KnifeThrow
-MRUItem5=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/IntroScene
+MRUItem2=/Game/_Scenes/Bowling
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/ClownBall
+MRUItem5=/Game/_Scenes/KnifeThrow
 MRUItem6=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -117,7 +118,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/IntroScene
+LastLevel=/Game/_Scenes/Maze
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1574,6 +1575,26 @@ BP_Button_KnifeThrow_C.Input=True
 BP_Button_KnifeThrow_C.Actor=True
 BP_Button_KnifeThrow_C.Tick=True
 BP_Button_KnifeThrow_C.Replication=True
+MaterialExpressionOneMinus.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionSubtract.MaterialExpressionSubtract=True
+MaterialExpressionSubtract.MaterialExpression=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionFrac.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionAbs.MaterialExpression=True
+MaterialExpressionCustom.MaterialExpressionCustom=True
+MaterialExpressionCustom.MaterialExpression=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1607,8 +1628,13 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+MaterialExpressionConstant3Vector="\"Object.Constant\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
+RecentlyPlaced=/Game/Materials/Maze/BloodFloor/mFloorTileTilesLarge_albedo_Mat.mFloorTileTilesLarge_albedo_Mat;
+RecentlyPlaced=/Game/Materials/Maze/BloodFloor/mFloorTileTilesLarge_albedo.mFloorTileTilesLarge_albedo;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/HeartBall/Bat/HeartBallLegBoneBatV2.HeartBallLegBoneBatV2;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Menu.BP_Button_Menu;
@@ -1625,16 +1651,12 @@ RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_Knife.BP_Knife;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Game/Materials/IntroScene/Moon/moonBetter.moonBetter;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_light.P_Dust_light;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Mist_mobile.P_Mist_mobile;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_MistRising_light.P_MistRising_light;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat.FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat;
 
 [MessageLog]
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=13.000 Y=0.000
+ScreenPosition=X=14.000 Y=12.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1656,7 +1678,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/Prototype CarnEvil/Images/Prototype Sprites/catacombs1Transparent.png
+GenericImport=F:/_CIU/_Original Assets/Other Peoples assets used/DripWater_Tutorial_Textures_Joakim_Mellergard/Tutorial_Textures/mFloorTileTilesLarge_albedo.TGA
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2409,9 +2431,10 @@ bConvertSceneUnit=False
 /Game/Blueprints/ActivityChooserTable_Blueprint.ActivityChooserTable_Blueprint=0
 /Game/Blueprints/_GeneralUse/Buttons/BP_Button_KnifeThrow.BP_Button_KnifeThrow=0
 /Game/Sprites_Decals/IntroScene/SkullWalls/catacombs1Transparent_Sprite.catacombs1Transparent_Sprite=0
+/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat=0
 
 [MaterialEditor]
-PrimType=1
+PrimType=3
 
 [DetailCategoriesAdvanced]
 WorldSettings.Lightmass=True
