--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,12 +74,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/Maze
-MRUItem2=/Game/_Scenes/IntroScene
-MRUItem3=/Game/_Scenes/Bowling
-MRUItem4=/Game/_Scenes/ClownBall
-MRUItem5=/Game/_Scenes/KnifeThrow
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/IntroScene
+MRUItem2=/Game/_Scenes/HeartBall
+MRUItem3=/Game/_Scenes/Maze
+MRUItem4=/Game/_Scenes/Bowling
+MRUItem5=/Game/_Scenes/ClownBall
 MRUItem6=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -88,7 +88,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/KnifeThrow
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -114,7 +114,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/KnifeThrow
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1627,6 +1627,7 @@ ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribu
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_Knife.BP_Knife;
 RecentlyPlaced=/Game/FBX_Models/HeartBall/Heart/HumanHeartV3Smooth_Cylinder_001.HumanHeartV3Smooth_Cylinder_001;
 RecentlyPlaced=/Game/FBX_Models/HeartBall/Heart/HumanHeartV3Smooth_Cylinder.HumanHeartV3Smooth_Cylinder;
 RecentlyPlaced=/Game/FBX_Models/HeartBall/Heart/HumanHeartV3Smooth_Cube.HumanHeartV3Smooth_Cube;
@@ -1646,10 +1647,9 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/HeartBall/Bat/HeartBallLegBoneBatV2.HeartBallLegBoneBatV2;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Menu.BP_Button_Menu;
-RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_KnifeThrow.BP_Button_KnifeThrow;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [RootWindow]
 ScreenPosition=X=8.000 Y=15.000
@@ -2429,6 +2429,7 @@ bConvertSceneUnit=False
 /Game/Sprites_Decals/IntroScene/SkullWalls/catacombs1Transparent_Sprite.catacombs1Transparent_Sprite=0
 /Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat=0
 /Game/FBX_Models/Bowling/Pins/Pin_Materials/middleage_lightskinned_female_Mat.middleage_lightskinned_female_Mat=0
+/Game/Sprites_Decals/IntroScene/SkullWalls/catacombs1Transparent.catacombs1Transparent=0
 
 [MaterialEditor]
 PrimType=1
