--- a/CIU_CarnEvil_Final/Config/DefaultEngine.ini
+++ b/CIU_CarnEvil_Final/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_Scenes/IntroScene.IntroScene
+EditorStartupMap=/Game/_Scenes/VR_Menu.VR_Menu
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/_Scenes/IntroScene.IntroScene
+GameDefaultMap=/Game/_Scenes/VR_Menu.VR_Menu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
@@ -107,5 +107,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="StickySurface")
-
-
