--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -75,10 +75,10 @@ CurrentScalingGridSize=6
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/ClownBall
-MRUItem2=/Game/_Scenes/Bowling
-MRUItem3=/Game/_Scenes/IntroScene
+MRUItem0=/Game/_Scenes/IntroScene
+MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem2=/Game/_Scenes/ClownBall
+MRUItem3=/Game/_Scenes/Bowling
 MRUItem4=/Game/_Scenes/KnifeThrow
 MRUItem5=/Game/_Scenes/HeartBall
 MRUItem6=/Game/_Scenes/Maze
@@ -116,7 +116,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/IntroScene
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1632,6 +1632,10 @@ VR_Menu_C.Default=True
 VR_Menu_C.Replication=True
 VR_Menu_C.Input=True
 VR_Menu_C.Actor=True
+IntroScene_C.Tick=True
+IntroScene_C.Replication=True
+IntroScene_C.Input=True
+IntroScene_C.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2479,6 +2483,7 @@ bConvertSceneUnit=False
 /Game/Blueprints/_GeneralUse/Buttons/BP_Button_Quit.BP_Button_Quit=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.VR_Menu=0
 /Game/Blueprints/_GeneralUse/Buttons/BP_Button_Start.BP_Button_Start=1
+/Game/_Scenes/IntroScene.IntroScene:PersistentLevel.IntroScene=0
 
 [MaterialEditor]
 PrimType=1
