--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,12 +76,12 @@ CameraSpeed=2
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/Bowling
-MRUItem3=/Game/_Scenes/Maze
-MRUItem4=/Game/_Scenes/VR_Menu
-MRUItem5=/Game/_Scenes/ClownBall
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/Maze
+MRUItem2=/Game/_Scenes/KnifeThrow
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/ClownBall
+MRUItem5=/Game/_Scenes/Bowling
 MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -91,7 +91,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Materials/IntroScene/Moon
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,7 +117,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -145,7 +145,7 @@ BP_PickupCube_C.Cooking=True
 BP_PickupCube_C.Input=True
 BP_PickupCube_C.Actor=True
 StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=False
+StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
@@ -1674,12 +1674,14 @@ MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/IntroScene/Moon/MoonImage1_Mat.MoonImage1_Mat;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Sprites_Decals/_GeneralUse/FeatureWall/Feature_Wall_Sprite.Feature_Wall_Sprite;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/ParticleEffects/Menu/M_OceanBloodMenu.M_OceanBloodMenu;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Menu/BloodFloorMenu_Mat.BloodFloorMenu_Mat;
 RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Quit.BP_Button_Quit;
@@ -1687,19 +1689,17 @@ RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Start.BP_Button_St
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/HMDLocomotionPawn.HMDLocomotionPawn;
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController;
 RecentlyPlaced=/Game/ParticleEffects/IntroScene/P_Fire_TrapBossEnd_mobile.P_Fire_TrapBossEnd_mobile;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ParticleEffects/IntroScene/Ocean/M_OceanBlood.M_OceanBlood;
 RecentlyPlaced=/Game/Materials/Maze/BloodFloor/mFloorTileTilesLarge_albedo.mFloorTileTilesLarge_albedo;
 RecentlyPlaced=/Game/Materials/IntroScene/Moon/AtmosphereMoon1_Mat.AtmosphereMoon1_Mat;
-RecentlyPlaced=/Game/Materials/IntroScene/Moon/moonBetter_Mat.moonBetter_Mat;
 
 [MessageLog]
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=5.000 Y=4.000
+ScreenPosition=X=13.000 Y=2.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -2531,7 +2531,7 @@ SelectedSnapMode=3
 SnapTimeToFrames=False
 FixedTimeStepPlayback=False
 PreferFrameNumbers=True
-SnapEnabled=True
+SnapEnabled=False
 ShowTimeCursorPosForAllKeys=False
 InitialInterpMode2=5
 
