--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,9 +76,9 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/IntroScene
-MRUItem2=/Game/_Scenes/KnifeThrow
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/Maze
 MRUItem4=/Game/_Scenes/HeartBall
 MRUItem5=/Game/_Scenes/ClownBall
@@ -117,7 +117,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/KnifeThrow
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1665,7 +1665,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+Object=
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -1674,7 +1674,7 @@ CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 MeshComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 PrimitiveComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 SceneComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
-ActorComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+ActorComponent=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" "
@@ -1719,7 +1719,7 @@ RecentlyPlaced=/Game/ParticleEffects/IntroScene/P_Fire_TrapBossEnd_mobile.P_Fire
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=42.000 Y=9.000
+ScreenPosition=X=25.000 Y=5.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
