--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,11 +74,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 GridEnabled=False
 CurrentPosGridSize=1
+CurrentRotGridSize=6
 
 [MRU]
 MRUItem0=/Game/_Scenes/KnifeThrow
-MRUItem1=/Game/_Scenes/VR_Menu
-MRUItem2=/Game/_Scenes/IntroScene
+MRUItem1=/Game/_Scenes/IntroScene
+MRUItem2=/Game/_Scenes/VR_Menu
 MRUItem3=/Game/_Scenes/Maze
 MRUItem4=/Game/_Scenes/HeartBall
 MRUItem5=/Game/_Scenes/ClownBall
@@ -91,7 +92,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Audio/Menu
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1657,6 +1658,36 @@ SoundNodeBranch.Branch=True
 GameModeBase.Classes=True
 GameModeBase.Game=True
 GameModeBase.GameMode=True
+BP_KitchenKnife_C.Tick=True
+BP_KitchenKnife_C.Actor=True
+BP_KitchenKnife_C.Rendering=True
+BP_KitchenKnife_C.Replication=True
+BP_KitchenKnife_C.Input=True
+BP_KitchenKnife_C.Variable=True
+BP_KitchenKnife_C.TransformCommon=True
+BP_KitchenKnife_C.Sockets=True
+BP_KitchenKnife_C.StaticMesh=True
+BP_KitchenKnife_C.Materials=True
+BP_KitchenKnife_C.Physics=True
+BP_KitchenKnife_C.Collision=True
+BP_KitchenKnife_C.Lighting=True
+BP_KitchenKnife_C.Tags=True
+BP_KitchenKnife_C.ComponentReplication=True
+BP_KitchenKnife_C.Cooking=True
+BP_KitchenKnife_C.Events=True
+REINST_BP_KitchenKnife_C_74.Variable=True
+REINST_BP_KitchenKnife_C_74.TransformCommon=True
+REINST_BP_KitchenKnife_C_74.Sockets=True
+REINST_BP_KitchenKnife_C_74.StaticMesh=True
+REINST_BP_KitchenKnife_C_74.Materials=True
+REINST_BP_KitchenKnife_C_74.Physics=True
+REINST_BP_KitchenKnife_C_74.Collision=True
+REINST_BP_KitchenKnife_C_74.Lighting=True
+REINST_BP_KitchenKnife_C_74.Rendering=True
+REINST_BP_KitchenKnife_C_74.Tags=True
+REINST_BP_KitchenKnife_C_74.ComponentReplication=True
+REINST_BP_KitchenKnife_C_74.Cooking=True
+REINST_BP_KitchenKnife_C_74.Events=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1671,9 +1702,9 @@ MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
-MeshComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
-PrimitiveComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
-SceneComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 ActorComponent=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1694,12 +1725,16 @@ MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Kitchen_Knife/KitchenKnifeV9_Smooth.KitchenKnifeV9_Smooth;
+RecentlyPlaced=/Game/FBX_Models/Maze/Severed_Head_Mount/Severed_Head_MountV1_Smooth.Severed_Head_MountV1_Smooth;
+RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
+RecentlyPlaced=/Game/FBX_Models/Maze/Trunk/trunk_V1.trunk_V1;
 RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V1.COG_V1;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V2.COG_V2;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire/P_Env_Fire_Grate_01.P_Env_Fire_Grate_01;
+RecentlyPlaced=/Game/ParticleEffects/IntroScene/P_Env_Fire_Grate_01.P_Env_Fire_Grate_01;
 RecentlyPlaced=/Game/Materials/IntroScene/Moon/MoonImage1_Mat.MoonImage1_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1710,16 +1745,12 @@ RecentlyPlaced=/Game/ParticleEffects/Menu/M_OceanBloodMenu.M_OceanBloodMenu;
 RecentlyPlaced=/Game/Materials/Menu/BloodFloorMenu_Mat.BloodFloorMenu_Mat;
 RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Quit.BP_Button_Quit;
-RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Start.BP_Button_Start;
-RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/HMDLocomotionPawn.HMDLocomotionPawn;
-RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController;
-RecentlyPlaced=/Game/ParticleEffects/IntroScene/P_Fire_TrapBossEnd_mobile.P_Fire_TrapBossEnd_mobile;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=25.000 Y=5.000
+ScreenPosition=X=6.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1741,7 +1772,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/32937__digifishmusic__grandfather-clock-digifish.wav
+GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/Maze/trunk_V1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2519,6 +2550,8 @@ bConvertSceneUnit=False
 /Game/_Scenes/IntroScene.IntroScene:PersistentLevel.AmbientSound_OceanRight2.AmbientSound_OceanRight2_SoundCue=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSound_oCEANlEFT.AmbientSound_OceanLeft_SoundCue=0
 /Game/_Scenes/KnifeThrow.KnifeThrow:PersistentLevel.AmbientSound_TargetRotate.AmbientSound_TargetRotate_SoundCue=0
+/Game/FBX_Models/KnifeThrow/Kitchen_Knife/KitchenKnifeV9_Smooth.KitchenKnifeV9_Smooth=0
+/Game/Blueprints/KnifeThrow/BP_KitchenKnife.BP_KitchenKnife=0
 
 [MaterialEditor]
 PrimType=1
