--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,6 +73,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=False,EnabledStats=,bShowFullToolbar=True))
 CurrentScalingGridSize=6
 CurrentRotGridSize=6
+GridEnabled=False
+CurrentPosGridSize=3
 
 [MRU]
 MRUItem0=/Game/_Scenes/IntroScene
@@ -90,7 +92,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/Tunnel
+ContentBrowserTab1.SelectedPaths=/Game/Audio/IntroScene
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1686,6 +1688,7 @@ REINST_BP_KitchenKnife_C_74.Tags=True
 REINST_BP_KitchenKnife_C_74.ComponentReplication=True
 REINST_BP_KitchenKnife_C_74.Cooking=True
 REINST_BP_KitchenKnife_C_74.Events=True
+FbxImportUI.Animation=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1723,13 +1726,15 @@ MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
+RecentlyPlaced=/Game/FBX_Models/Maze/Candle/Candle_HolderV3_Smooth.Candle_HolderV3_Smooth;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/FBX_Models/IntroScene/BentTree/Bent_Tree.Bent_Tree;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/BasicTunnel_Entrance.BasicTunnel_Entrance;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Kitchen_Knife/KitchenKnifeV9_Smooth.KitchenKnifeV9_Smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Severed_Head_Mount/Severed_Head_MountV1_Smooth.Severed_Head_MountV1_Smooth;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Game/FBX_Models/Maze/Trunk/trunk_V1.trunk_V1;
-RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V1.COG_V1;
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V2.COG_V2;
@@ -1741,8 +1746,6 @@ RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryText
 RecentlyPlaced=/Game/Sprites_Decals/_GeneralUse/FeatureWall/Feature_Wall_Sprite.Feature_Wall_Sprite;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/ParticleEffects/Menu/M_OceanBloodMenu.M_OceanBloodMenu;
-RecentlyPlaced=/Game/Materials/Menu/BloodFloorMenu_Mat.BloodFloorMenu_Mat;
-RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1770,7 +1773,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/Maze/trunk_V1.fbx
+GenericImport=C:/Users/Matt/Desktop/Parahna_DIE.wav
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2550,6 +2553,7 @@ bConvertSceneUnit=False
 /Game/_Scenes/KnifeThrow.KnifeThrow:PersistentLevel.AmbientSound_TargetRotate.AmbientSound_TargetRotate_SoundCue=0
 /Game/FBX_Models/KnifeThrow/Kitchen_Knife/KitchenKnifeV9_Smooth.KitchenKnifeV9_Smooth=0
 /Game/Blueprints/KnifeThrow/BP_KitchenKnife.BP_KitchenKnife=0
+/Game/Audio/IntroScene/CE_5_BoatCreakingAndRockingSFXLoop_Adam.CE_5_BoatCreakingAndRockingSFXLoop_Adam=1
 
 [MaterialEditor]
 PrimType=1
@@ -2596,7 +2600,7 @@ SelectedSnapMode=3
 SnapTimeToFrames=False
 FixedTimeStepPlayback=False
 PreferFrameNumbers=True
-SnapEnabled=False
+SnapEnabled=True
 ShowTimeCursorPosForAllKeys=False
 InitialInterpMode2=5
 
