--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,13 +75,13 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=4
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/HeartBall
 MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/IntroScene
+MRUItem2=/Game/_Scenes/Bowling
 MRUItem3=/Game/_Scenes/Maze
-MRUItem4=/Game/_Scenes/HeartBall
-MRUItem5=/Game/_Scenes/ClownBall
-MRUItem6=/Game/_Scenes/Bowling
+MRUItem4=/Game/_Scenes/VR_Menu
+MRUItem5=/Game/_Scenes/IntroScene
+MRUItem6=/Game/_Scenes/ClownBall
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Audio/Maze
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -116,7 +116,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/HeartBall
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1704,6 +1704,17 @@ BP_Axe_C.Tags=True
 BP_Axe_C.ComponentReplication=True
 BP_Axe_C.Cooking=True
 BP_Axe_C.Events=True
+Bowling_C.Default=True
+REINST_BP_KitchenKnife_C_260.Tick=True
+REINST_BP_KitchenKnife_C_260.Actor=True
+REINST_BP_KitchenKnife_C_260.Rendering=True
+REINST_BP_KitchenKnife_C_260.Replication=True
+REINST_BP_KitchenKnife_C_260.Input=True
+REINST_BP_Axe_C_266.Tick=True
+REINST_BP_Axe_C_266.Actor=True
+REINST_BP_Axe_C_266.Rendering=True
+REINST_BP_Axe_C_266.Replication=True
+REINST_BP_Axe_C_266.Input=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2571,6 +2582,8 @@ bConvertSceneUnit=False
 /Game/Audio/IntroScene/CE_5_BoatCreakingAndRockingSFXLoop_Adam.CE_5_BoatCreakingAndRockingSFXLoop_Adam=1
 /Game/Blueprints/KnifeThrow/BP_Axe.BP_Axe=0
 /Game/FBX_Models/Menu/ClockTreeTrunk.ClockTreeTrunk=0
+/Game/Audio/HeartBall/CE_16_HeartBeingFired_IPR_Adam.CE_16_HeartBeingFired_IPR_Adam=1
+/Game/_Scenes/Maze.Maze:PersistentLevel.AmbientSound_Electricity_Machine.AmbientSound_Electricity_Machine_SoundCue=0
 
 [MaterialEditor]
 PrimType=1
@@ -2609,6 +2622,7 @@ ProjectPackagingSettings.Blueprints=True
 PaperSprite.Collision=True
 AudioComponent.Sound=True
 AssetViewerSettings.Settings=True
+AmbientSound.Sound=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
