--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -120,6 +120,11 @@ LastLevel=/Game/_Scenes/HeartBall
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/_Scenes/HeartBall.HeartBall:PersistentLevel.HeartBall
+OpenAssetsAtExit=/Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController
+OpenAssetsAtExit=/Game/VirtualReality/Mannequin/Character/Mesh/MannequinHand_Right.MannequinHand_Right
+OpenAssetsAtExit=/Game/VirtualReality/Mannequin/Character/Mesh/MannequinHand_Right_Skeleton.MannequinHand_Right_Skeleton
+OpenAssetsAtExit=/Game/Blueprints/HeartBall/BP_Bat.BP_Bat
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1715,6 +1720,29 @@ REINST_BP_Axe_C_266.Actor=True
 REINST_BP_Axe_C_266.Rendering=True
 REINST_BP_Axe_C_266.Replication=True
 REINST_BP_Axe_C_266.Input=True
+SkeletalMeshSocket.Socket Parameters=True
+BP_PickupCube_C.Tick=True
+BP_PickupCube_C.Replication=True
+REINST_BP_Bat_C_214.Tick=True
+REINST_BP_Bat_C_214.Actor=True
+REINST_BP_Bat_C_214.Rendering=True
+REINST_BP_Bat_C_214.Replication=True
+REINST_BP_Bat_C_214.Input=True
+REINST_BP_Bat_C_222.Tick=True
+REINST_BP_Bat_C_222.Actor=True
+REINST_BP_Bat_C_222.Rendering=True
+REINST_BP_Bat_C_222.Replication=True
+REINST_BP_Bat_C_222.Input=True
+REINST_BP_Bat_C_230.Tick=True
+REINST_BP_Bat_C_230.Actor=True
+REINST_BP_Bat_C_230.Rendering=True
+REINST_BP_Bat_C_230.Replication=True
+REINST_BP_Bat_C_230.Input=True
+REINST_BP_Bat_C_238.Tick=True
+REINST_BP_Bat_C_238.Actor=True
+REINST_BP_Bat_C_238.Rendering=True
+REINST_BP_Bat_C_238.Replication=True
+REINST_BP_Bat_C_238.Input=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2584,6 +2612,7 @@ bConvertSceneUnit=False
 /Game/FBX_Models/Menu/ClockTreeTrunk.ClockTreeTrunk=0
 /Game/Audio/HeartBall/CE_16_HeartBeingFired_IPR_Adam.CE_16_HeartBeingFired_IPR_Adam=1
 /Game/_Scenes/Maze.Maze:PersistentLevel.AmbientSound_Electricity_Machine.AmbientSound_Electricity_Machine_SoundCue=0
+/Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube=0
 
 [MaterialEditor]
 PrimType=1
