--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -76,8 +76,8 @@ CurrentRotGridSize=6
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/KnifeThrow
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/HeartBall
 MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/Bowling
 MRUItem4=/Game/_Scenes/Maze
@@ -117,12 +117,11 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/KnifeThrow
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/KnifeThrow/BP_Axe.BP_Axe
-OpenAssetsAtExit=/Game/_Scenes/HeartBall.HeartBall:PersistentLevel.HeartBall
+OpenAssetsAtExit=/Game/_Scenes/KnifeThrow.KnifeThrow:PersistentLevel.KnifeThrow
 
 [PluginBrowser]
 InstalledPlugins=Substance
