--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,12 +75,12 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/_Scenes/KnifeThrow
-MRUItem1=/Game/_Scenes/HeartBall
-MRUItem2=/Game/_Scenes/IntroScene
-MRUItem3=/Game/_Scenes/Bowling
-MRUItem4=/Game/_Scenes/Maze
-MRUItem5=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/KnifeThrow
+MRUItem2=/Game/_Scenes/HeartBall
+MRUItem3=/Game/_Scenes/IntroScene
+MRUItem4=/Game/_Scenes/Bowling
+MRUItem5=/Game/_Scenes/Maze
 MRUItem6=/Game/_Scenes/ClownBall
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/KnifeThrow
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -116,7 +116,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/KnifeThrow
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1766,6 +1766,16 @@ REINST_BP_KitchenKnife_C_140.Actor=True
 REINST_BP_KitchenKnife_C_140.Rendering=True
 REINST_BP_KitchenKnife_C_140.Replication=True
 REINST_BP_KitchenKnife_C_140.Input=True
+BP_Axe_C.Navigation=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.Collision=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2678,6 +2688,7 @@ AmbientSound.Sound=True
 StaticMeshComponent.Collision=True
 BoxComponent.Collision=True
 StaticMeshComponent.Lighting=True
+PrimitiveComponent.Collision=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
